# rp_portfolio

./: .gitignore  README.md  pyproject.toml
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/: blog_detail.html  blog_index.html
hello_world/: urls.py
personal_portfolio/: settings.py  urls.py
personal_portfolio/templates/: base.html
projects/: models.py  urls.py
projects/migrations/: 0001_initial.py
src/rp_portfolio/: __init__.py
