[project]
name = "rp-portfolio"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Artemii", email = "artemyin@gmail.com" }
]
dependencies = ["Django~=4.2.1", "pylint-django~=2.5.3"]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["black~=23.3.0"]
